Small exception handling updates in Service and Controller. Updated methods in UI so that when an ValidationException is thrown, it lets the user retry.